Worked on some stuff for editing Physical posts (The GUI was made here) and added a box to lock and unlock a post. Also did so you cant apply to a locked post

--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
@@ -27,7 +27,7 @@
         </div><br />
         <div class="createPost-BtnFloat">
             @Html.HiddenFor(m => m.postId)
-            <input type="submit" name="EditPost" value="Save Changes" class="standard-Btn-Colour standard-Btn-border btn" />
+            <input type="submit" name="EditPost" value="Save changes" class="standard-Btn-Colour standard-Btn-border btn" />
         </div><br />
     }
 </div>
