--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPhysicalPost.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPhysicalPost.cshtml
@@ -3,9 +3,12 @@
 <h2>Edit Physical Post</h2>
 
 <div class="createPost-Box-ViewPost-Standard">
-    @using (Html.BeginForm("CreatePhysical", "CreatePost", FormMethod.Post))
+    @using (Html.BeginForm("UpdatePhysical", "CreatePost", FormMethod.Post))
     {
         <div>
+            <b>Locking:</b><br />
+            @Html.CheckBoxFor(m => m.IsLocked)
+            <p>Check this box to lock the post, preventing any more users from applying.</p>
             <b>Titel:</b><br />
             @* TODO: Insert Titel logic *@
             @ViewBag.Title
@@ -13,33 +16,34 @@
             <br />
             <b>Category:</b><br />
             @* TODO: Insert Category logic *@
-            @Html.DropDownListFor(m => m.CategoryId, (IEnumerable<SelectListItem>)ViewBag.DropDownList, "Select Category")
+            @Html.DropDownListFor(m => m.CategoryId, (IEnumerable<SelectListItem>)ViewBag.DropDownList, (string)ViewBag.CategoryName)
         </div>
         <div>
             <b>Description:</b><br />
             @* TODO: Insert Description logic *@
-            @Html.TextArea("DescriptionArea", (string)ViewBag.Description, 10, 0, new { @readonly = "readonly", @class = "standard-TextArea-Size" })
+            @Html.TextAreaFor(m => m.Description, 10, 0, new { @class = "standard-TextArea-Size" })
         </div>
         <div>
             <b>Alternativ Description:</b><br />
-            @* TODO: Alternativ Insert Description logic *@
+            @Html.TextAreaFor(m => m.AltDescription, 10, 0, new { @class = "standard-TextArea-Size" })
         </div>
         <div>
             <b>Zipcode:</b><br />
-            @* TODO: Insert ZipCode logic *@
+            @Html.TextBoxFor(m => m.Zipcode)
             <br />
         </div>
         <div>
             <b>Address:</b><br />
-            @* TODO: Insert Address logic *@
+            @Html.TextBoxFor(m => m.Address)
             <br />
         </div>
         <div>
             <b>Tags:</b><br />
-            @* TODO: Insert tags logic *@
+            @Html.TextBoxFor(m => m.TagsString)
         </div><br />
         <div class="createPost-BtnFloat">
-            <input type="submit" name="Edit Physical Post" value="Save Changes" class="standard-Btn-Colour standard-Btn-border btn" />
+            @Html.HiddenFor(m => m.postId)
+            <input type="submit" name="Edit Physical Post" value="Save changes" class="standard-Btn-Colour standard-Btn-border btn" />
         </div><br />
     }
 </div>
