Changed a bit of Gui

--- a/SolvrSolution/SolvrWebClient/Views/Post/Index.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Post/Index.cshtml
@@ -49,6 +49,7 @@
     <hr />
 
     @* View the comments here *@
+    <h2>Comments</h2>
     @foreach (SolvrLibrary.Comment item in ViewBag.CommentList)
     {
         <div class="post-Box-ViewComment-Standard">
