added a few things in database and create tables. fixed register tab with functionality and error handling. tested as well. edited a bit in login. added "logged in as:" label in partial view

--- a/SolvrSolution/SolvrWebClient/Views/Account/Register.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
     <title>Register</title>
 </head>
 <body>
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("RegisterUser", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
