--- a/SolvrSolution/SolvrWebClient/Views/Account/Login.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Account/Login.cshtml
@@ -19,10 +19,10 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @*Her er tekst boksen for at skrive sit email*@
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 @*Her er tekst boksen for at skrive sin kode*@
