--- a/SolvrSolution/SolvrWebClient/Views/Post/Index.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Post/Index.cshtml
@@ -19,8 +19,17 @@
         </div>
         <div class="post-BtnFloat">
             @{/* TODO: Only Post owner can choose to edit and view this */}
-            <input type="button" name="Report Post" value="Edit" style="margin-right: 15px" class="standard-Btn-Colour standard-Btn-border btn" onclick="location.href='@Url.Action("EditPost", "CreatePost", new { ID = Model.PostId })'"/>
-            <input type="button" name="Report Post" value="Report" class="standard-Btn-Colour standard-Btn-border btn" onclick="location.href='@Url.Action("NotImplementedYet", "Home")'"/> 
+            @if (Session["Username"] != null)
+            {
+                if (ViewBag.UserIsOwner)
+                {
+                    <input type="button" name="Report Post" value="Edit" style="margin-right: 15px" class="standard-Btn-Colour standard-Btn-border btn" onclick="location.href='@Url.Action("EditPost", "CreatePost", new { ID = Model.PostId })'" />
+                }
+                else
+                {
+                    <input type="button" name="Report Post" value="Report" class="standard-Btn-Colour standard-Btn-border btn" onclick="location.href='@Url.Action("NotImplementedYet", "Home")'" />
+                }
+            }
         </div>
         <div>
             @Html.Label("", (string)ViewBag.DateCreated, new { @class = "post-DateLabel" })
@@ -40,7 +49,15 @@
                 @Html.TextAreaFor(m => m.Text, 4, 0, new { @class = "standard-TextArea-Size", placeholder = "Write a comment here..." })
             </div>
             <div class="post-BtnFloat">
-                <input type="submit" name="Post Comment" value="Post Comment" class="standard-Btn-Colour standard-Btn-border btn" />
+                @if (Session["Username"] != null)
+                {
+                    <input type="submit" name="Post Comment" value="Post Comment" class="standard-Btn-Colour standard-Btn-border btn" />
+                }
+                else
+                {
+                    <input type="button" name="Placeholder Button" value="Log in to comment" class="standard-Btn-Colour standard-Btn-border btn" />
+                }
+
             </div>
             <br />
         </div>
@@ -66,7 +83,10 @@
                 @Html.TextArea("ViewCommentArea", item.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })
             </div>
             <div class="post-BtnFloat" style="margin-right: 5%">
-                <input type="submit" name="Report Comment" value="Report" class="standard-Btn-Colour standard-Btn-border btn" />
+                @if (Session["Username"] != null && !Session["Username"].Equals(item.User.Username))
+                {
+                    <input type="submit" name="Report Comment" value="Report" class="standard-Btn-Colour standard-Btn-border btn" />
+                }
             </div>
             @Html.Label("", (item.DateCreated.ToShortTimeString() + " " + item.DateCreated.ToShortDateString()), new { @class = "post-DateLabel" })
             <br />
