--- a/SolvrSolution/SolvrWebClient/Views/Home/Contact.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Home/Contact.cshtml
@@ -53,12 +53,7 @@
 </div>
 
 
-@*<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-</address>
-
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>*@
+    9200 Aalborg SV<br />
+    Sofiendalsvej 60
+</address>
