--- a/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>@DateTime.Now.Year - Solvr, a web solution</p>
         </footer>
     </div>
 
