--- a/SolvrSolution/SolvrWebClient/Views/Home/Index.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
             {
                 <input type="button" name="View post" value="Go back one page" class="standard-Btn-border btn standard-Btn-Colour" onclick="location.href='@Url.Action("Index", "Home", new { loadCount = ViewBag.LoadCount - 24 })'" />
             }
-            @Html.Label("","Showing posts from nr " + (int)ViewBag.LoadCount + " to nr " + (int)(ViewBag.LoadCount+ ViewBag.PostList.Count))
+            @Html.Label("","Showing posts from nr " + ((int)ViewBag.LoadCount+1) + " to nr " + (int)(ViewBag.LoadCount+ ViewBag.PostList.Count))
             @if (ViewBag.PostList.Count == 24)
             {
                 <input type="button" name="View post" value="Load more Pages" class="standard-Btn-border btn standard-Btn-Colour" onclick="location.href='@Url.Action("Index", "Home", new { loadCount = ViewBag.LoadCount + 24 })'"/>
