--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
@@ -29,6 +29,7 @@
         </div><br />
         <div class="createPost-BtnFloat">
             @Html.HiddenFor(m => m.postId)
+            @Html.HiddenFor(m => m.LastEdited)
             <input type="submit" name="EditPost" value="Save changes" class="standard-Btn-Colour standard-Btn-border btn" />
         </div><br />
     }
